# Yahoo-Finnace-Crawler

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt
src/: CMakeLists.txt  main.cpp
src/base/: CMakeLists.txt  crtp.hpp
src/crawler/: CMakeLists.txt  crawler.hpp  crawler_base.hpp  crypto.cpp  crypto.hpp  currencies.cpp  currencies.hpp  stock_gainer.cpp  stock_gainer.hpp  stock_loser.cpp  stock_loser.hpp  world_indices.cpp  world_indices.hpp
tools/cmake/: CMakeLists.txt  FindHTMLCXX.cmake  longlp_desired_compile_features.cmake  longlp_desired_compile_options.cmake  longlp_download_conan_cmake_if_not_exist.cmake  longlp_make_exec.cmake  longlp_make_library.cmake  longlp_message.cmake
